--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <head>
 <body>
-<link rel="stylesheet" href="css/pico.min.css">
-
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
 hello
 
   
