--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-hello
 
+Linux Installer
+Linux Desktop Setup
+<a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
+<a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup">Linux Desktop Setup</a> 
   
 </body>
 </head>
