--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+</link>
+<html lang="en"> 
+
+<title>Linux Installer Site</title>
 
 Linux Installer
 Linux Desktop Setup
