--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   
 <a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
 <a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup">Linux Desktop Setup</a> 
+
+<meta name="description" content="Artix Runit encrypted installer, LARBS fork">
   
 </body>
 </head>
