--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<body>
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-</link>
-<html lang="en"> 
-
-<title>Linux Installer Site</title>
-  
-<a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
-<a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup">Linux Desktop Setup</a> 
-
-<meta name="description" content="Artix Runit encrypted installer, LARBS fork">
-  
-</body>
+  <meta charset="UTF-8">
+  <meta name="description" content="Artix Runit encrypted installer, LARBS fork">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Linux Installer Site</title>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+  />
 </head>
+<body>
+  <a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
+  <a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup">Linux Desktop Setup</a>
+</body>
+</html>
