--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta name="description" content="Artix Runit encrypted installer, LARBS fork">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Linux Installer Site</title>
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
-  />
+  	<link rel='stylesheet' type='text/css' href='pico.css'>
+
 </head>
 <body>
   <a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
