--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
   <meta charset="UTF-8">
   <meta name="description" content="Artix Runit encrypted installer, LARBS fork">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
