--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
   <a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup">Linux Desktop Setup</a>
-  <a href="https://wolfyxon.github.io/3ds-web-stuff/games/ttt/">3DS - Tic Tac Toe</a>
+  <a href="https://wolfyxon.github.io/3ds-web-stuff/">3DS Games</a>
 
 </body>
 </html>
