--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
   <a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup">Linux Desktop Setup</a>
   <a href="https://wolfyxon.github.io/3ds-web-stuff/">3DS Games</a>
-  <a href="https://mattkc.com/etc/snakeqr/snake-minified.html">3DS Games</a>
+  <a href="https://mattkc.com/etc/snakeqr/snake-minified.html">Snake</a>
+    <a href="https://lbannana.github.io/angrybirds/">Angry Bird Chrome</a>
 </body>
 </html>
