--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <a href="https://github.com/Internetperson-dev/artix-runit-install">Linux Installer</a> 
   <a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup">Linux Desktop Setup</a>
   <a href="https://wolfyxon.github.io/3ds-web-stuff/">3DS Games</a>
-  <a href="  http://froxot.de/">More 3DS Games</a>
+  <a href="http://froxot.de/">More 3DS Games</a>
+  <a href="https://www.elizium.nu/scripts/lemmings/">Lemmings!</a>
 </body>
 </html>
