--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <a href="https://wolfyxon.github.io/3ds-web-stuff/">3DS Games</a>
   <a href="http://froxot.de/">More 3DS Games</a>
   <a href="https://www.elizium.nu/scripts/lemmings/">Lemmings!</a>
+  <a href="https://internetperson-dev.github.io/site/3ds">Test</a>
 </body>
 </html>
