--- a/3ds.html
+++ b/3ds.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Platformer Game</title>
+    <title>Platformer Game</title>
     <style>
         body {
             margin: 0;
@@ -12,10 +12,11 @@
             justify-content: center;
             align-items: center;
             height: 100vh; /* Centers the canvas vertically */
+            background: #cce7ff; /* Light blue background */
         }
 
         canvas {
-            background: #cce7ff; /* Light blue background */
+            background: #ffffff; /* Canvas color */
             display: block; /* Remove margin */
         }
     </style>
@@ -23,6 +24,7 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <script>
+        // Set up canvas
         var canvas = document.getElementById('gameCanvas');
         var ctx = canvas.getContext('2d');
         resizeCanvas();
@@ -30,24 +32,24 @@
         // Player object
         var player = {
             x: 50,
-            y: 300,
-            width: 30,
-            height: 30,
+            y: 200,
+            width: 32,
+            height: 32,
             speedX: 0,
             speedY: 0,
-            jumpPower: -10,
+            jumpPower: -12,
             gravity: 0.5,
             grounded: false,
+            sprite: new Image()
         };
+        player.sprite.src = 'https://opengameart.org/sites/default/files/spritesheet_0.png'; // Placeholder for player sprite (public domain)
 
         // Platform properties
-        var platform = {
-            x: 0,
-            y: 350,
-            width: canvas.width,
-            height: 20,
-        };
+        var platforms = [
+            { x: 0, y: 350, width: 800, height: 20 } // Ground platform
+        ];
 
+        // Update game logic
         function update() {
             // Apply gravity
             player.speedY += player.gravity;
@@ -56,58 +58,30 @@
             player.x += player.speedX;
             player.y += player.speedY;
 
-            // Collision detection with platform
-            if (player.y + player.height >= platform.y) {
-                player.y = platform.y - player.height; // Snap player to the top of the platform
-                player.grounded = true; // Set grounded to true
-                player.speedY = 0; // Reset vertical speed
-            } else {
-                player.grounded = false; // Player is not grounded
-            }
+            // Collision detection with platforms
+            player.grounded = false; // Reset grounded status
+            platforms.forEach(platform => {
+                if (player.y + player.height >= platform.y && player.x + player.width >= platform.x && player.x <= platform.x + platform.width) {
+                    player.y = platform.y - player.height; // Snap player to the top of the platform
+                    player.grounded = true; // Set grounded to true
+                    player.speedY = 0; // Reset vertical speed
+                }
+            });
 
             // Clear the canvas
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            // Draw the platform
+
+            // Draw platforms
             ctx.fillStyle = '#4CAF50'; // Green platform color
-            ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
-            // Draw the player
-            ctx.fillStyle = '#ff5733'; // Player color
-            ctx.fillRect(player.x, player.y, player.width, player.height);
+            platforms.forEach(platform => {
+                ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
+            });
+
+            // Draw player
+            ctx.drawImage(player.sprite, player.x, player.y, player.width, player.height);
         }
 
-        function handleInput() {
-            // Handle keyboard input (for debugging)
-            if (keys.left) {
-                player.speedX = -2;
-            } else if (keys.right) {
-                player.speedX = 2;
-            } else {
-                player.speedX = 0;
-            }
-
-            // Jumping with W, Space, or Up Arrow if player is grounded
-            if (keys.up && player.grounded) {
-                player.speedY = player.jumpPower; // Jump
-                player.grounded = false;
-            }
-
-            // Gamepad input handling
-            var gamepads = navigator.getGamepads();
-            if (gamepads[0]) { // Check if a gamepad is connected
-                var gp = gamepads[0];
-                if (gp.buttons[0].pressed) { // Button A (Cross on PlayStation / A on Xbox)
-                    if (player.grounded) {
-                        player.speedY = player.jumpPower;
-                        player.grounded = false;
-                    }
-                }
-
-                // Axis movement
-                player.speedX = gp.axes[0] * 2; // Left stick X-axis for movement
-            }
-        }
-
-        // Keyboard input handling
+        // Handle input
         var keys = { left: false, right: false, up: false };
 
         window.addEventListener('keydown', function(e) {
@@ -122,30 +96,38 @@
             if (e.keyCode === 38 || e.keyCode === 87 || e.keyCode === 32) keys.up = false; // Up arrow, 'W', or 'Space'
         });
 
-        function resizeCanvas() {
-            // Set canvas size to match the window dimensions while maintaining the aspect ratio
-            var aspectRatio = 800 / 400; // Original canvas dimensions
-            if (window.innerWidth / window.innerHeight < aspectRatio) {
-                canvas.width = window.innerWidth;
-                canvas.height = window.innerWidth / aspectRatio;
+        function handleInput() {
+            // Handle player movement
+            if (keys.left) {
+                player.speedX = -5; // Move left
+            } else if (keys.right) {
+                player.speedX = 5; // Move right
             } else {
-                canvas.height = window.innerHeight;
-                canvas.width = window.innerHeight * aspectRatio;
+                player.speedX = 0; // Stop horizontal movement
             }
-            platform.width = canvas.width; // Update platform width
+
+            // Jumping
+            if (keys.up && player.grounded) {
+                player.speedY = player.jumpPower; // Jump
+                player.grounded = false;
+            }
         }
 
-        // Call resizeCanvas on window resize
-        window.addEventListener('resize', resizeCanvas);
+        // Resize canvas function
+        function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        }
 
         function gameLoop() {
             handleInput();
             update();
-            requestAnimationFrame(gameLoop);
+            requestAnimationFrame(gameLoop); // Run the loop at 60 FPS
         }
 
         // Start the game loop
         gameLoop();
+        window.addEventListener('resize', resizeCanvas);
     </script>
 </body>
 </html>
