--- a/3ds.html
+++ b/3ds.html
@@ -42,7 +42,7 @@
             grounded: false,
             sprite: new Image()
         };
-        player.sprite.src = 'https://opengameart.org/sites/default/files/spritesheet_0.png'; // Placeholder for player sprite (public domain)
+        player.sprite.src = 'https://opengameart.org/sites/default/files/simple_pixel_character.png'; // Link to the character sprite
 
         // Platform properties
         var platforms = [
