--- a/3ds.html
+++ b/3ds.html
@@ -29,20 +29,82 @@
         var ctx = canvas.getContext('2d');
         resizeCanvas();
 
-        // Player object
-        var player = {
-            x: 50,
-            y: 200,
-            width: 32,
-            height: 32,
-            speedX: 0,
-            speedY: 0,
-            jumpPower: -12,
-            gravity: 0.5,
-            grounded: false,
-            sprite: new Image()
-        };
-        player.sprite.src = 'https://opengameart.org/sites/default/files/simple_pixel_character.png'; // Link to the character sprite
+// Player object
+var player = {
+    x: 50,
+    y: 200,
+    width: 32,
+    height: 32,
+    speedX: 0,
+    speedY: 0,
+    jumpPower: -12,
+    gravity: 0.5,
+    grounded: false,
+    sprite: new Image(),
+    spriteWidth: 32, // Width of one sprite frame
+    spriteHeight: 32, // Height of one sprite frame
+    currentFrame: 0,
+    totalFrames: 4, // Change this based on the number of frames in the sprite sheet
+    frameDelay: 5, // Delay between frames
+    frameCount: 0 // Frame counter
+};
+
+// Load the sprite sheet
+player.sprite.src = 'https://opengameart.org/sites/default/files/2d_character_spritesheet.png';
+
+// Update game logic
+function update() {
+    // Apply gravity
+    player.speedY += player.gravity;
+
+    // Move the player
+    player.x += player.speedX;
+    player.y += player.speedY;
+
+    // Collision detection with platforms
+    player.grounded = false; // Reset grounded status
+    platforms.forEach(platform => {
+        if (player.y + player.height >= platform.y && player.x + player.width >= platform.x && player.x <= platform.x + platform.width) {
+            player.y = platform.y - player.height; // Snap player to the top of the platform
+            player.grounded = true; // Set grounded to true
+            player.speedY = 0; // Reset vertical speed
+        }
+    });
+
+    // Update animation
+    if (player.speedX !== 0) {
+        player.frameCount++;
+        if (player.frameCount >= player.frameDelay) {
+            player.frameCount = 0;
+            player.currentFrame = (player.currentFrame + 1) % player.totalFrames; // Loop through frames
+        }
+    } else {
+        player.currentFrame = 0; // Reset to idle frame
+    }
+
+    // Clear the canvas
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // Draw platforms
+    ctx.fillStyle = '#4CAF50'; // Green platform color
+    platforms.forEach(platform => {
+        ctx.fillRect(platform.x, platform.y, platform.width, platform.height);
+    });
+
+    // Draw player animation
+    ctx.drawImage(
+        player.sprite,
+        player.currentFrame * player.spriteWidth, // X position of the frame in the sprite sheet
+        0, // Y position of the frame in the sprite sheet
+        player.spriteWidth,
+        player.spriteHeight,
+        player.x,
+        player.y,
+        player.width,
+        player.height
+    );
+}
+
 
         // Platform properties
         var platforms = [
